Fixed menu height on Safari

--- a/src/assets/styles/blocks/menu.sass
+++ b/src/assets/styles/blocks/menu.sass
@@ -3,6 +3,7 @@
 .menu
   flex: 0
   display: flex
+  min-height: fit-content
   justify-content: space-between
   padding: 16px
   box-shadow: 0px 5px 8px 2px rgba(0,0,0,0.15)
